--- a/locales/it.json
+++ b/locales/it.json
@@ -4,29 +4,29 @@
     "bug-reports-back": "server / backend, motore di routing, app Android, profili, sito brouter.de",
     "bug-reports-front": "web client / frontend.",
     "chat": "Chat con utenti e sviluppatori",
-    "contact": "Contatto:",
-    "contact-language": "Lingua preferita è l'inglese, dato che abbiamo utilizzatori e contribuenti internazionali entrambi.",
+    "contact": "Contatti:",
+    "contact-language": "La lingua preferita è l'inglese, dato che abbiamo sia utilizzatori che contributori internazionali.",
     "data": "Dati:",
-    "data-description": "Questo è basato su <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Di solito è aggiornato quotidianamente, veda la data dei <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">data files</a>.",
-    "description": "Servizio online del motore di routing BRouter. Per l'app Android offline ed altri informazioni veda <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
-    "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Informativa sulla privacy</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Credits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Changelog</a></i> ed\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">altre info</a></i> sul client.",
+    "data-description": "Basato su <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Di solito viene aggiornato quotidianamente, leggi la data dei <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">file dati</a>.",
+    "description": "Servizio online del motore di routing BRouter. Per l'app Android offline ed altri informazioni vedere <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
+    "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Informativa sulla privacy</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Ringraziamenti</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Changelog</a></i> ed\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">altre info</a></i> sul client.",
     "support": "Discussioni/domande generali, assistenza",
-    "title": "A proposito",
+    "title": "Informazioni",
     "tooltip": "Mostra più informazioni su BRouter-Web"
   },
   "credits": {
-    "boundaries": "Limiti amministrativi: <a href=\"https://osm-boundaries.com\" target=\"_blank\">OSM-Boundaries</a>, <a href=\"https://overpass-api.de/\" class=\"overpass-url\" target=\"_blank\">Overpass API</a>",
+    "boundaries": "Confini amministrativi: <a href=\"https://osm-boundaries.com\" target=\"_blank\">OSM-Boundaries</a>, <a href=\"https://overpass-api.de/\" class=\"overpass-url\" target=\"_blank\">Overpass API</a>",
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
     "elevation-data": "Dati d'elevazione",
-    "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, fonti: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, e la communità d'utilizzatori GIS",
+    "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, fonti: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, e la comunità di utilizzatori GIS",
     "esri-tiles": "Esri World Imagery",
     "map-data": "Dati mappa",
     "map-tiles": "Sezioni di mappa",
     "nominatim": "Ricerca con <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
-    "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap contributors</a> in <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>",
+    "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >contributori OpenStreetMap</a> in <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>",
     "pois": "Posizioni (PDI): <a href=\"https://overpass-api.de/\" class=\"overpass-url\" target=\"_blank\">Overpass API</a>",
-    "title": "Credits"
+    "title": "Ringraziamenti"
   },
   "export": {
     "format": "Formato",
@@ -34,21 +34,22 @@
     "format_geojson": "GeoJSON",
     "format_gpx": "GPX",
     "format_kml": "KML",
-    "include": "Incluso",
-    "include_waypoints": "Waypoints",
+    "include": "Includi",
+    "include_waypoints": "Waypoint",
     "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
     "route-loop": "{{from}} ({{distance}}km)",
     "title": "Esporta percorso",
     "trackname": "Nome"
   },
   "footer": {
-    "ascend": "Dislivello",
+    "ascend": "Dislivello complessivo",
+    "beeline-warning": "Avvertimento: nessun dato per linee rette, valori interpolati.",
     "cost": "Costo",
     "distance": "Distanza",
     "elevation-chart": "mostra/nascondi scheda altimetrica",
     "energy-per-100km": "Energia per 100 km",
     "hours": "ore",
-    "hours-abbrev": "h",
+    "hours-abbrev": "o",
     "kilometer": "chilometri",
     "kilometer-abbrev": "km",
     "kilowatthour": "chilowattora",
@@ -57,7 +58,7 @@
     "meter": "metri",
     "meter-abbrev": "m",
     "no-elevation-data": "Nessuna elevazione disponibile per questo tragitto.",
-    "plain-ascend": "Salita leggera",
+    "plain-ascend": "Differenza di quota",
     "stats-info": "Crea un percorso per ottenere statistiche",
     "total-energy": "Energia totale",
     "travel-time": "Tempo di percorso"
@@ -69,21 +70,31 @@
     "shift": "Shift/Maiusc"
   },
   "layers": {
-    "add-base": "Aggungi mappa di base",
+    "add-base": "Aggungi livello di base",
     "add-overlay": "Aggungi sovvraposizione",
     "add-overpass": "Aggiungi richiesta overpass",
     "custom-layer-name-helptext": "ad es.: OpenStreetMap",
     "custom-layer-name-label": "nome livello personalizzato",
     "custom-layer-url-helptext-normal": "URL per livelli normali, ad es.: https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",
     "custom-layer-url-helptext-overpass": "Richiesta Overpass, ad es.: nwr[shop]['diet:vegan']['diet:vegan'!=no];",
-    "custom-layer-url-label": "Livello URL/Richiesta personalizzato",
-    "customize": "Personalizza i layer",
+    "custom-layer-url-label": " URL/Richiesta livello personalizzato",
+    "customize": "Personalizza i livelli",
     "opacity-slider": "Barra di scorrimento per l'opacità",
     "overpass-loading-indicator": "Esecuzione della richiesta alle API Overpass…",
     "remove-selection": "Annulla selezione"
   },
   "loadNogos": {
     "defaultProperties": "Proprietà di default",
+    "error": {
+      "invalid-default-nogo-radius": "Raggio nogo predefinito non valido.",
+      "invalid-nogo-buffering-radius": "Raggio cuscinetto del nogo non valido.",
+      "loading-file-error": "Impossibile caricare il file: {{err}}.",
+      "loading-file-too-big": "Troppe zone a nogo in questo file! Per favore semplifica la geometria e/o riduci il numero di zone.",
+      "loading-file-unexpected": "Errore inatteso durante il caricamento di questo file.",
+      "missing-default-nogo-weight": "Peso nogo di default mancante.",
+      "missing-file-url": "File o URL mancante.",
+      "no-valid-area": "Nessuna area valida trovata nell'input fornito."
+    },
     "file": "File (.geojson)",
     "load": "Carica",
     "nogoBuffer": "Cuscinetto delle aree vietate (in metri)",
@@ -125,18 +136,18 @@
       "osm": "OpenStreetMap",
       "osmde": "OpenStreetMap.de",
       "outdoors": "Outdoor (Thunderforest)",
-      "route-quality": "Codificazione qualità percorso",
+      "route-quality": "Codifica la qualità percorso",
       "stamen-terrain": "Terreno (Stamen)",
       "strava-segments": "Segmenti Strava",
       "topo": "OpenTopoMap"
     },
-    "loading": "Caricando...",
+    "loading": "Caricamento…",
     "locate-me": "Dove sono?",
     "nogo": {
       "cancel": "Annula aggiunta zona no-go",
       "click-drag": "Clicca e trascina per creare un cerchio",
       "draw": "Crea zona no-go rotonda",
-      "edit": "Clicca per modifiche",
+      "edit": "Clicca per modificare",
       "help": "&square; = sposta / ridimensiona, <span class=\"fa fa-trash-o\"></span> = cancella, <br>clicca cerchio per finire le modifiche"
     },
     "not-applicable-here": "non applicabile qui",
@@ -144,23 +155,26 @@
     "opacity-slider-shortcut": "{{action}}\n(Tieni premuto il tasto {{key}} per disattivare temporaneamente)",
     "preview": "Anteprima",
     "privacy": "Privacy",
-    "reverse-route": "Invertire il percorso",
-    "route-quality-altitude": "Codificazione altimetrica",
-    "route-quality-cost": "Codificazione costo",
-    "route-quality-incline": "Codificazione pendenza",
+    "reverse-route": "Inverti il percorso",
+    "route-quality-altitude": "Codifica altimetrica",
+    "route-quality-cost": "Codifica del costo",
+    "route-quality-incline": "Codifica della pendenza",
     "route-quality-shortcut": "{{action}} (tasto {{key}} per dis-/attivare)",
-    "route-tooltip-segment": "Trascina per creare un nuovo waypoint",
+    "route-tooltip-segment": "Trascina per creare nuovo waypoint. Clicca per dis-/attivare linea retta.",
     "route-tooltip-waypoint": "Waypoint. Trascina per spostarlo. Clicca per rimuoverlo.",
     "strava-biking": "Visualizza segmenti Strava bici",
     "strava-running": "Visualizza segmenti Strava corsa",
-    "strava-shortcut": "{{action}}\n(tasto {{key}} per dis-/attivare layer, clicca per ricarichare la zona in vista)",
-    "zoomInTitle": "Aumenta Zoom",
-    "zoomOutTitle": "Zoom indietro"
+    "strava-shortcut": "{{action}}\n(tasto {{key}} per dis-/attivare livelli, clicca per ricarichare la zona in vista)",
+    "toggle-beeline": "Dis-/attiva linea retta",
+    "zoomInTitle": "Aumenta zoom",
+    "zoomOutTitle": "Diminuisci zoom"
   },
   "modal": {
-    "close": "Chiudi"},
+    "close": "Chiudi",
+    "or": ""
+  },
   "navbar": {
-    "about": "A proposito",
+    "about": "Informazioni",
     "alternative": {
       "first": "1ª alternativa",
       "original": "Originale",
@@ -173,7 +187,7 @@
       "nogos": "Carica zone no-go",
       "title": "Carica",
       "tooltip": "{{tracksAction}} (tasto {{tracksKey}})\n{{trackAsRouteAction}} ({{trackAsRouteKey}})\n{{nogosAction}} ({{nogosKey}})",
-      "tracks": "Carica traccie"
+      "tracks": "Carica tracce"
     },
     "profile": {
       "car-eco": "Automobile (economico)",
@@ -183,10 +197,10 @@
       "fastbike": "Bici da corsa",
       "fastbike-asia-pacific": "Bici da corsa (Asia Pacific)",
       "fastbike-lowtraffic": "Bici da corsa (poco traffico)",
-      "hiking-beta": "Escursionismo (beta)",
+      "hiking-mountain": "Escursionismo",
       "moped": "Ciclomotore",
       "rail": "Treno",
-      "river": "Fiume",
+      "river": "Fluviale",
       "safety": "Sicuro = evita traffico",
       "shortest": "Il più corto",
       "trekking": "Bici trekking",
@@ -199,10 +213,18 @@
     },
     "profile-tooltip": "\n(tasto {{key}} per cambiare)"
   },
+  "searchfav": {
+    "addfavorite": "aggiungi come favorito",
+    "ask_removeall": "Cancellare tutti favoriti di ricerca?",
+    "export": "esporta favoriti in file",
+    "import": "importa favoriti da file",
+    "openfavorites": "apri lista favoriti",
+    "removeall": "cancella tutti favoriti"
+  },
   "sidebar": {
     "analysis": {
       "header": {
-        "highway": "Autostrada",
+        "highway": "Strada",
         "smoothness": "Scorrevolezza",
         "surface": "Superfice"
       },
@@ -230,35 +252,35 @@
     },
     "layers": {
       "category": {
-        "base-layers": "Layer di base",
+        "base-layers": "Livelli di base",
         "country": "Paese",
         "europe": "Europa",
         "europe-monolingual": "Europa monolingua",
-        "overlays": "Sovvraposizioni",
+        "overlays": "Sovrapposizioni",
         "overpass": "Posizioni (PDI)",
         "worldwide": "Mondiale",
         "worldwide-international": "Mondiale internazionale",
         "worldwide-monolingual": "Mondiale monolingua"
       },
       "collapse": "Riduci tutti",
-      "custom-layers": "Layer personalizzati",
-      "customize": "Aggiungi o rimuovi layer personalizzati",
+      "custom-layers": "Livelli personalizzati",
+      "customize": "Aggiungi o rimuovi livelli personalizzati",
       "expand": "Espandi tutti",
-      "optional": "Aggiungi o rimuovi layer opzionali",
-      "optional-layers": "Più",
-      "overlay-opacity": "Trasparenza sovvraposizione",
+      "optional": "Aggiungi o rimuovi livelli opzionali",
+      "optional-layers": "Altro",
+      "overlay-opacity": "Trasparenza sovrapposizione",
       "overlay-opacity_plural": "Trasparenza delle sovrapposizioni",
       "table": {
         "URL": "URL/Richiesta",
-        "empty": "Nessun layer personalizzato definito finora.",
+        "empty": "Nessun livello personalizzato definito finora.",
         "name": "Nome",
         "type": "Tipo",
         "type_layer": "Livello",
         "type_overlay": "Sovrapposizione",
         "type_overpass_query": "Richiesta Overpass"
       },
-      "title": "Layer",
-      "tooltip": "Scegli layer"
+      "title": "Livelli",
+      "tooltip": "Scegli livello"
     },
     "profile": {
       "apply": "Applica",
@@ -274,14 +296,14 @@
   "title": "BRouter web client",
   "trackasroute": {
     "browse": "Sfoglia",
-    "explainpoi": "(visualizza waypoints come POI's)",
-    "explaintracklayer": "(visualizza traccia come layer distinto)",
+    "explainpoi": "(visualizza waypoint come POI)",
+    "explaintracklayer": "(visualizza traccia come livello distinto)",
     "file": "File traccia",
     "fuzziness": "Sfocatura",
     "pleasewait": "Attendere prego!",
     "showpois": "POI",
     "title": "Carica traccia come percorso",
-    "tracklayer": "Layer di traccia",
+    "tracklayer": "Livello di traccia",
     "tuning": "Tuning"
   },
   "warning": {
@@ -293,7 +315,7 @@
     "profile-error": "Errore profilo: risposta dal server vuota o assente",
     "strava-error": "Errore nel recupero dei segmenti Strava: {{error}}",
     "temporary-profile": "<strong>Nota:</strong> Profili personalizzati carichati si trovano solo temporaneamente nel cache del server. <br/>Si prega di salvare le modificazioni localmente sul suo PC.",
-    "tracks-load-error": "Errore caricando traccie: {{error}}",
+    "tracks-load-error": "Errore nel caricamento tracce: {{error}}",
     "upload-error": "Errore di caricamento: {{error}}"
   },
   "whatsnew": {
